router for user login

--- a/src/Doctrine/Mapping/Entity/User.orm.yml
+++ b/src/Doctrine/Mapping/Entity/User.orm.yml
@@ -3,7 +3,7 @@ App\Entity\User:
   table: user
 
   lifecycleCallbacks:
-    preUpdate: (markAsUpdated)
+    preUpdate: [markAsUpdated]
 
   id:
     id: 
