--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=a7d8cab7e86d4031c9c32870e30e9ba6
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:root@docker_db_1:3306/s4apirest
+DATABASE_URL="mysql://root:root@127.0.0.1:3306/s4apirest"
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
@@ -33,3 +33,7 @@ JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=mprod
 TOKEN_TTL=5184000
 ###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
+###< nelmio/cors-bundle ###
