--- a/composer.json
+++ b/composer.json
@@ -5,17 +5,20 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "api-platform/api-pack": "^1.2",
+        "facebook/graph-sdk": "^5.7",
+        "guzzlehttp/guzzle": "^6.3",
         "lexik/jwt-authentication-bundle": "^2.6",
-        "ramsey/uuid": "^3.8",
-        "symfony/console": "4.3.*",
-        "symfony/dotenv": "4.3.*",
-        "symfony/flex": "^1.3.1",
-        "symfony/framework-bundle": "4.3.*",
-        "symfony/monolog-bundle": "^3.4",
+        "ramsey/uuid-doctrine": "^1.5",
+        "symfony/apache-pack": "^1.0",
+        "symfony/console": "4.2.*",
+        "symfony/dotenv": "4.2.*",
+        "symfony/flex": "^1.1",
+        "symfony/framework-bundle": "4.2.*",
+        "symfony/monolog-bundle": "^3.3",
         "symfony/orm-pack": "^1.0",
-        "symfony/yaml": "4.3.*"
-    },
-    "require-dev": {
+        "symfony/yaml": "4.2.*"
     },
     "config": {
         "preferred-install": {
@@ -59,7 +62,11 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.3.*"
+            "require": "4.2.*"
         }
+    },
+    "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
+        "symfony/test-pack": "^1.0"
     }
 }
